--- a/github-app/app/src/main/res/layout/activity_github_app.xml
+++ b/github-app/app/src/main/res/layout/activity_github_app.xml
@@ -23,7 +23,7 @@
                 style="@style/Widget.Material3.AppBarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                tools:title="@string/app_list_users_title"
+                tools:title="@string/user_list_title"
                 app:titleCentered="true" />
         </com.google.android.material.appbar.AppBarLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
